# vetinari-openfang

./: .dockerignore  .gitleaksignore  .gitmodules  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  docker-compose.yml
.forgejo/workflows/: homelab-build.yml  upstream-sync.yml
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ci.yml  homelab-build.yml  homelab-shared-docs-bump.yml  homelab-upstream-sync.yml  release.yml
agents/langchain-code-reviewer/: requirements.txt
crates/openfang-api/src/: openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/openfang-api/static/css/: components.css
crates/openfang-api/tests/: api_integration_test.rs
crates/openfang-channels/: Cargo.toml
crates/openfang-channels/src/: discord.rs  matrix.rs  router.rs  slack.rs  telegram.rs  types.rs  whatsapp.rs
crates/openfang-desktop/: Cargo.toml  tauri.conf.json
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: config.rs  heartbeat.rs  kernel.rs  metering.rs  registry.rs  wizard.rs
crates/openfang-memory/src/: session.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: agent_loop.rs  apply_patch.rs  compactor.rs  context_budget.rs  context_overflow.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  routing.rs  session_repair.rs  tool_runner.rs  tts.rs  workspace_sandbox.rs
crates/openfang-runtime/src/drivers/: anthropic.rs  bedrock.rs  claude_code.rs  mod.rs  openai.rs  qwen_code.rs
crates/openfang-skills/src/: clawhub.rs  installer.rs
crates/openfang-types/: Cargo.toml
crates/openfang-types/src/: agent.rs  media.rs  message.rs  model_catalog.rs  scheduler.rs  tool_compat.rs
docs/: agent-templates.md  api-reference.md  channel-adapters.md  configuration.md  getting-started.md  troubleshooting.md
homelab/: CHANGELOG.md  Dockerfile  PATCHES.md  README.md
homelab/.github/workflows/: build.yml  shared-docs-bump.yml  upstream-sync.yml
homelab/config/: SOUL.md  TOOLS.md  agent.toml  openfang.toml
homelab/k8s/: deployment.yaml  ingressroute.yaml  kustomization.yaml  missions-board.md  pvc.yaml  rbac.yaml  schedules-job.yaml  service.yaml
homelab/k8s/database/: database.yaml  kustomization.yaml  role-bootstrap-job.yaml
sdk/javascript/: package.json
