[workspace]
resolver = "2"
members = [
    "crates/openfang-types",
    "crates/openfang-memory",
    "crates/openfang-runtime",
    "crates/openfang-wire",
    "crates/openfang-api",
    "crates/openfang-kernel",
    "crates/openfang-cli",
    "crates/openfang-channels",
    "crates/openfang-migrate",
    "crates/openfang-skills",
    "crates/openfang-desktop",
    "crates/openfang-hands",
    "crates/openfang-extensions",
    "xtask",
]

[workspace.package]
version = "0.6.9"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RightNow-AI/openfang"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.12"
rmp-serde = "1.3.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Concurrency
dashmap = "6.2.1"
crossbeam = "0.8.4"

# Logging / Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"

# IDs
uuid = { version = "1.23.1", features = ["v4", "v5", "serde"] }

# Database
rusqlite = { version = "0.39.0", features = ["bundled", "serde_json"] }

# CLI
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"

# HTTP client (for LLM drivers)
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "gzip", "deflate", "brotli"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }

# Async trait
async-trait = "0.1.89"

# Base64
base64 = "0.22.1"

# Bytes
bytes = "1.11.1"

# Futures
futures = "0.3.32"
prost = "0.14.3"

# WebSocket client (for Discord/Slack gateway)
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2.5.8"

# WASM sandbox
wasmtime = "43.0.2"

# HTTP server (for API daemon)
axum = { version = "0.8.9", features = ["ws", "multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["cors", "trace", "compression-gzip", "compression-br"] }

# Home directory resolution
dirs = "6"

# YAML parsing
serde_yaml = "0.9.34"

# JSON5 parsing
json5 = "0.4.1"

# Directory walking
walkdir = "2.5.0"

# Security
sha2 = "0.11.0"
sha1 = "0.11.0"
aes = "0.9.0"
cbc = "0.2.0"
hmac = "0.13.0"
hex = "0.4.3"
subtle = "2.6.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.10.1"
zeroize = { version = "1.8.2", features = ["derive"] }

# Rate limiting
governor = "0.10.4"

# Interactive CLI
ratatui = "0.30.0"
colored = "3.1.1"

# Encryption
aes-gcm = "0.10.3"
argon2 = "0.5.3"

# HTML entity decoding
html-escape = "0.2.13"

# Lightweight regex
regex-lite = "0.1.9"

# MCP SDK (official Rust implementation)
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }

# Socket options (SO_REUSEADDR)
socket2 = "0.6.3"

# Zip archive extraction
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

# Email (SMTP + IMAP)
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
imap = "2.4.1"
native-tls = { version = "0.2.18", features = ["vendored"] }
mailparse = "0.16.1"

# MQTT client
rumqttc = { version = "0.25.1", default-features = false, features = ["use-native-tls"] }

# OpenSSL (vendored = statically compiled, no runtime libssl dependency on Linux)
openssl = { version = "0.10.80", features = ["vendored"] }

# Testing
tokio-test = "0.4.5"
tempfile = "3.27.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 8
opt-level = 2
strip = false
