[package]
name = "openfang-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native desktop application for the OpenFang Agent OS (Tauri 2.0)"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
openfang-kernel = { path = "../openfang-kernel" }
openfang-api = { path = "../openfang-api" }
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
serde = { workspace = true }
toml = { workspace = true }
open = "5.3.5"

[features]
# Tauri uses custom-protocol in production builds
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "openfang-desktop"
path = "src/main.rs"
